force-app/main/default/objects/Customer_Part_Number__c/Customer_Part_Number__c.object-meta.xml
<CustomObject>
    <description>makes a link between u-blox part number, Account Name and the Customer&apos;s Part Number</description>
    <label>Customer Part Number</label>
    <nameField>
        <label>Customer Part Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Part Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>