force-app/main/default/objects/Customer_Part_Number__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Linked to Account based on Abacus Customer Number</description>
    <inlineHelpText>(From Abacus) Related Account based on Abacus Customer Number</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Part Numbers</relationshipLabel>
    <relationshipName>Customer_Part_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>