force-app/main/default/objects/Customer_Part_Number__c/fields/Client_No__c.field-meta.xml
<CustomField>
    <fullName>Client_No__c</fullName>
    <description>Client number for Abacus mapping</description>
    <label>Client No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>