force-app/main/default/objects/Customer_Part_Number__c/fields/CPN_Id__c.field-meta.xml
<CustomField>
    <fullName>CPN_Id__c</fullName>
    <label>CPN Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>