force-app/main/default/objects/Customer_Part_Number__c/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <description>This is the P/N in the customers system</description>
    <inlineHelpText>(From Abacus) This is the P/N in the customers system</inlineHelpText>
    <label>Customer Part Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>