force-app/main/default/objects/Customer_Part_Number__c/fields/Link_to_PPAP__c.field-meta.xml
<CustomField>
    <fullName>Link_to_PPAP__c</fullName>
    <label>Link to PPAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>