force-app/main/default/objects/Customer_Part_Number__c/fields/PPAP_Date__c.field-meta.xml
<CustomField>
    <fullName>PPAP_Date__c</fullName>
    <description>Date when PPAP was issued and submitted to customer</description>
    <inlineHelpText>Date when PPAP was issued and submitted to customer</inlineHelpText>
    <label>PPAP Date</label>
    <type>Date</type>
</CustomField>