force-app/main/default/objects/Customer_Part_Number__c/fields/PPAP_Issued__c.field-meta.xml
<CustomField>
    <fullName>PPAP_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a PPAP has been issued</description>
    <label>PPAP Issued</label>
    <type>Checkbox</type>
</CustomField>