force-app/main/default/objects/Customer_Part_Number__c/fields/Type_No_c__c.field-meta.xml
<CustomField>
    <fullName>Type_No_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to Product based on Type Number</description>
    <inlineHelpText>(From Abacus) Related Product based on Type Number</inlineHelpText>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Part Numbers</relationshipLabel>
    <relationshipName>Customer_Part_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>