force-app/main/default/objects/Customer_Part_Number__c/fields/Type_Number_field_update__c.field-meta.xml
<CustomField>
    <fullName>Type_Number_field_update__c</fullName>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Type Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>