force-app/main/default/objects/Customer_Part_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Type_No_c__c</columns>
    <columns>Type_Number_field_update__c</columns>
    <columns>Customer_Part_Number__c</columns>
    <columns>PPAP_Issued__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>